engines/ep/src/ephemeral_vb.cc
@@ -676,10 +676,13 @@ VBNotifyCtx EphemeralVBucket::abortStoredValue(
         StoredValue& prepared,
         int64_t prepareSeqno,
         boost::optional<int64_t> abortSeqno) {
-    if (!prepared.isPending()) {
+    // From MB-36650 this function is enabled to accept also Completed Prepares
+    // (Committed/Aborted) for converting/updating the SV in input to
+    // PrepareAborted.
+    if (!(prepared.isPending() || prepared.isCompleted())) {
         throw std::invalid_argument(
                 "EphemeralVBucket::abortStoredValue: Cannot call on a "
-                "non-Pending StoredValue");
+                "non-Pending and non-Completed StoredValue");
     }
 
     // Aborting an item in an Ephemeral VBucket consists of:
